#100DaysOfCode. Day 3 - HTML and CSS. Better Styling.

--- a/index.html
+++ b/index.html
@@ -1,78 +1,134 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-
     <meta charset="utf-8">
-    <title>#100DaysOfCode Challenge: Day 1 - @Carlos_Develops</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
-
+    <title>#100DaysOfCode Challenge: Day 2 - @Carlos_Develops</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet" type="text/css">
   </head>
+  <body>
 
-  <body class="soft">
-    <div id="main" class="border">
+    <!-- MAIN WRAPPER -->
+    <div id="wrapper" class="mrg-au">
 
-      <!-- HEADER -->
+      <!-- LOGO -->
 
-      <div id="header" class="border pad shadow">
+      <div id="logo" class="mrg-au">
 
-        <div id="challenge">
-          <h1 class="border shadow center ">#100DaysOfCode</h1>
-        </div>
-
-        <div id="day">
-          <h2 class="border shadow center sprg">Day 1: Sep. 15th, 2021.</h2>
-        </div>
-
-        <div id="twitter">
-          <h2 class="border shadow center blue"><em>Twitter: @Carlos_Develops</em></h2>
-        </div>
-
-        <div id="subject">
-          <h2 class="border shadow center gray"><u>HTML and CSS: Part 1</u></h2>
-        </div>
+        <h1 class="bg-main t-cnt pad">@Carlos_Develops</h1>
 
       </div>
 
-      <!-- /HEADER -->
-
-      <hr class="mrg-top">
-      <br>
-
       <!-- CONTENT -->
 
-      <div id="content">
+      <div id="content" class="mrg-au">
 
-        <div class="text pad border mrg-bot shadow gray">
+      <!-- NAVIGATION -->
 
-          <h3><u>CSS ANIMATIONS</u></h3>
+        <div id="nav">
 
-          <div class="pad border mrg-bot shadow soft">
+          <div id="challenge" class="t-cnt">
 
-            <div id="rectangle" class="animated center lineh">
-
-              <h1 class="top">Rectangle</h1>
-
+            <div>
+              <img src="img/github.png" alt="Github" height="50px;" width="50px;" class="bg-white pad-cnt-v">
             </div>
 
-            <div id="circle" class="animated center lineh">
-
-              <h1>Circle</h1>
-
+            <div>
+              <a href="https://github.com/Carlos-Develops" target="_blank">Carlos_Develops</a>
             </div>
 
-            <div id="button1" class="animated center">
-              <p class="center">Button</p>
-            </div>
+          </div>
+
+          <div id="webdevstack" class="t-cnt">
+
+            <a href="#" class="mrg-r">HTML</a>
+            <a href="#" class="mrg-r">CSS</a>
+            <a href="#" class="mrg-r">JavaScript</a>
 
           </div>
 
         </div>
 
+        <!-- SECTION -->
+        <div id="main-content">
+
+          <div id="motd">
+
+            <span class="text-big">Day 2</span><br><br>
+
+            <span class="text-big">of</span><br><br>
+
+            <span class="text-big text-red">#100DaysOfCode</span><br><br>
+
+            <p class="text-normal text-gray">Practiced a lot of CSS and HTML today. Here are the Results!</p><br><br>
+
+            <button type="button" class="btn-blue btn-pad text-normal rounded">Blue Button</button>
+
+            <button type="button" class="btn-gray btn-pad text-normal rounded mrg-l">Gray Button</button>
+
+            <button type="button" class="btn-green btn-pad text-normal rounded mrg-l">Green Button</button><br><br>
+
+            <span class="text-big">+1</span><span class="text-normal text-gray">Style</span>
+
+            <span class="text-big mrg-big-l">+1</span><span class="text-normal text-gray">Design</span>
+
+            <span class="text-big mrg-big-l">+1</span><span class="text-normal text-gray">Creativity</span>
+
+            <div id="main-pic">
+
+              <a href="https://www.pexels.com/photo/modern-computer-monitor-with-keyboard-and-mouse-4792728/" target="_blank">
+
+                <img src="img/pexels-anete-lusina-4792728.jpg" height="350px;" title="Picture courtesy of @anetelusina (Instagram). " alt="Modern Desktop Computer. ">
+
+              </a>
+              <div id="main-pic-msg" class="text-normal">
+                <p class="text-normal-big text-pad">Programming is Good</p>
+              </div>
+
+            </div>
+
+          </div>
+
+          <div id="practice">
+
+            <span class="text-big-2">What I've studied so far:</span><br><br>
+            <p class="text-gray">HTML and CSS: Better techniques for styling (said I would yesterday, <a href="https://twitter.com/Carlos_Develops/status/1438303273602191368" class="text-normal"><u>here</u></a>) although I'm pretty basic. Getting the hang of positioning in vanilla CSS. Step by step  &nbsp;&nbsp;;)</p>
+
+            <div id="icons">
+
+              <div id="icon-1" class="icon">
+                <img src="img/html5.png" height="150px" width="150px" alt="HTML5" title="HTML5"><br>
+                <p class="t-cnt mrg-cnt-v">HTML5</p>
+              </div>
+
+              <div id="icon-2" class="icon">
+                <img src="img/css.png" height="150px" width="150px" alt="CSS3" title="CSS3">
+                <p class="t-cnt mrg-cnt-v">CSS3</p>
+              </div>
+
+              <div id="icon-3" class="icon bg-white">
+                <img src="img/webdev.png" height="150px" width="150px" alt="Web Development" title="Web Development">
+                <p class="t-cnt mrg-cnt-v">Web Development</p>
+              </div>
+
+              <div id="icon-4" class="icon">
+                <img src="img/ubuntu.png" height="150px" width="150px" alt="Ubuntu Operating System" title="Ubuntu/LINUX Operating System">
+                <p class="t-cnt mrg-cnt-v">GNU/Linux</p>
+              </div>
+
+            </div>
+
+            <div id="end">
+              <p class="text-normal text-gray">That's all for today!. Gotta keep Improving! Need more practice and next I'm gonna study Responsive Design! It will be tough!</p><br>
+              <span class="text-big"><em>Hello World and Good Night!</em></span>
+            </div>
+
+          </div>
+
+        </div>
       </div>
-
-      <!-- /CONTENT -->
-
     </div>
+    <!-- /MAIN WRAPPER -->
 
   </body>
 </html>
