--- a/index.html
+++ b/index.html
@@ -1,134 +1,57 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+
     <meta charset="utf-8">
-    <title>#100DaysOfCode Challenge: Day 2 - @Carlos_Develops</title>
+    <title>#100DaysOfCode Challenge: Day 3 - @Carlos_Develops</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet" type="text/css">
+
   </head>
+
   <body>
+    <h1 class="t-cnt">@Carlos_Develops</h1>
+    <div class="main t-cnt">
 
-    <!-- MAIN WRAPPER -->
-    <div id="wrapper" class="mrg-au">
+      <div class="header">
 
-      <!-- LOGO -->
+        <div class="logo">
+          <h1>Logo</h1>
+        </div>
 
-      <div id="logo" class="mrg-au">
-
-        <h1 class="bg-main t-cnt pad">@Carlos_Develops</h1>
+        <div class="nav">
+          <h1>Nav-Menu</h1>
+        </div>
 
       </div>
 
-      <!-- CONTENT -->
-
-      <div id="content" class="mrg-au">
-
-      <!-- NAVIGATION -->
-
-        <div id="nav">
-
-          <div id="challenge" class="t-cnt">
-
-            <div>
-              <img src="img/github.png" alt="Github" height="50px;" width="50px;" class="bg-white pad-cnt-v">
-            </div>
-
-            <div>
-              <a href="https://github.com/Carlos-Develops" target="_blank">Carlos_Develops</a>
-            </div>
-
-          </div>
-
-          <div id="webdevstack" class="t-cnt">
-
-            <a href="#" class="mrg-r">HTML</a>
-            <a href="#" class="mrg-r">CSS</a>
-            <a href="#" class="mrg-r">JavaScript</a>
-
-          </div>
-
-        </div>
-
-        <!-- SECTION -->
-        <div id="main-content">
-
-          <div id="motd">
-
-            <span class="text-big">Day 2</span><br><br>
-
-            <span class="text-big">of</span><br><br>
-
-            <span class="text-big text-red">#100DaysOfCode</span><br><br>
-
-            <p class="text-normal text-gray">Practiced a lot of CSS and HTML today. Here are the Results!</p><br><br>
-
-            <button type="button" class="btn-blue btn-pad text-normal rounded">Blue Button</button>
-
-            <button type="button" class="btn-gray btn-pad text-normal rounded mrg-l">Gray Button</button>
-
-            <button type="button" class="btn-green btn-pad text-normal rounded mrg-l">Green Button</button><br><br>
-
-            <span class="text-big">+1</span><span class="text-normal text-gray">Style</span>
-
-            <span class="text-big mrg-big-l">+1</span><span class="text-normal text-gray">Design</span>
-
-            <span class="text-big mrg-big-l">+1</span><span class="text-normal text-gray">Creativity</span>
-
-            <div id="main-pic">
-
-              <a href="https://www.pexels.com/photo/modern-computer-monitor-with-keyboard-and-mouse-4792728/" target="_blank">
-
-                <img src="img/pexels-anete-lusina-4792728.jpg" height="350px;" title="Picture courtesy of @anetelusina (Instagram). " alt="Modern Desktop Computer. ">
-
-              </a>
-              <div id="main-pic-msg" class="text-normal">
-                <p class="text-normal-big text-pad">Programming is Good</p>
-              </div>
-
-            </div>
-
-          </div>
-
-          <div id="practice">
-
-            <span class="text-big-2">What I've studied so far:</span><br><br>
-            <p class="text-gray">HTML and CSS: Better techniques for styling (said I would yesterday, <a href="https://twitter.com/Carlos_Develops/status/1438303273602191368" class="text-normal"><u>here</u></a>) although I'm pretty basic. Getting the hang of positioning in vanilla CSS. Step by step  &nbsp;&nbsp;;)</p>
-
-            <div id="icons">
-
-              <div id="icon-1" class="icon">
-                <img src="img/html5.png" height="150px" width="150px" alt="HTML5" title="HTML5"><br>
-                <p class="t-cnt mrg-cnt-v">HTML5</p>
-              </div>
-
-              <div id="icon-2" class="icon">
-                <img src="img/css.png" height="150px" width="150px" alt="CSS3" title="CSS3">
-                <p class="t-cnt mrg-cnt-v">CSS3</p>
-              </div>
-
-              <div id="icon-3" class="icon bg-white">
-                <img src="img/webdev.png" height="150px" width="150px" alt="Web Development" title="Web Development">
-                <p class="t-cnt mrg-cnt-v">Web Development</p>
-              </div>
-
-              <div id="icon-4" class="icon">
-                <img src="img/ubuntu.png" height="150px" width="150px" alt="Ubuntu Operating System" title="Ubuntu/LINUX Operating System">
-                <p class="t-cnt mrg-cnt-v">GNU/Linux</p>
-              </div>
-
-            </div>
-
-            <div id="end">
-              <p class="text-normal text-gray">That's all for today!. Gotta keep Improving! Need more practice and next I'm gonna study Responsive Design! It will be tough!</p><br>
-              <span class="text-big"><em>Hello World and Good Night!</em></span>
-            </div>
-
-          </div>
-
-        </div>
+      <div class="spacer-v">
+        <p><strong>Vertical Spacer</strong></p>
       </div>
+
+      <div class="main-content clear">
+
+        <p><strong>Main-Content Area</strong></p>
+
+        <div class="sidebar">
+          <p><strong>Sidebar</strong></p>
+        </div>
+
+        <div class="content">
+          <p><strong>Content</strong></p>
+        </div>
+
+      </div>
+
+      <div class="spacer-v">
+        <p><strong>Vertical Spacer</strong></p>
+      </div>
+
+      <div class="footer">
+        <h1>Footer</h1>
+      </div>
+
     </div>
-    <!-- /MAIN WRAPPER -->
 
   </body>
+
 </html>
