#100DaysOfCode. Day 7 - HTML and CSS. Flexbox.

--- a/index.html
+++ b/index.html
@@ -3,53 +3,55 @@
   <head>
 
     <meta charset="utf-8">
-    <title>#100DaysOfCode Challenge: Day 3 - @Carlos_Develops</title>
+    <title>#100DaysOfCode Challenge: Day 7 - @Carlos_Develops</title>
     <link rel="stylesheet" href="style.css">
 
   </head>
 
   <body>
     <h1 class="t-cnt">@Carlos_Develops</h1>
-    <div class="main t-cnt">
-
-      <div class="header">
-
-        <div class="logo">
-          <h1>Logo</h1>
-        </div>
-
-        <div class="nav">
-          <h1>Nav-Menu</h1>
-        </div>
-
+    <br>
+    <h1 class="t-cnt">Flexbox</h1>
+    <br>
+    <h1 class="t-cnt">Container-1</h1>
+    <div class="container-1 t-cnt">
+      <div class="box box1"><h2>One</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea architecto, quos, a quae officia nulla aperiam veritatis quia commodi vero tempora enim in obcaecati sit.</p>
       </div>
-
-      <div class="spacer-v">
-        <p><strong>Vertical Spacer</strong></p>
+      <div class="box box2"><h2>Two</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi quos at, minus ipsum consectetur temporibus itaque. Labore perferendis saepe esse molestiae ullam fugiat quae vitae.</p>
       </div>
-
-      <div class="main-content clear">
-
-        <p><strong>Main-Content Area</strong></p>
-
-        <div class="sidebar">
-          <p><strong>Sidebar</strong></p>
-        </div>
-
-        <div class="content">
-          <p><strong>Content</strong></p>
-        </div>
-
+      <div class="box box3"><h2>Three</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam libero accusantium nihil ipsa, inventore itaque ad tempora illum quia sunt molestias soluta sed provident ut. Accusantium perferendis repudiandae, eligendi! Tempora quis, placeat cupiditate! Animi, voluptas?</p>
       </div>
+    </div>
 
-      <div class="spacer-v">
-        <p><strong>Vertical Spacer</strong></p>
+    <br>
+    <h1 class="t-cnt" style="color: blue;">Container-2</h1>
+    <div class="container-2 t-cnt">
+      <div class="box box-item"><h2>Four</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci quibusdam et voluptatem, porro? Voluptas, aut.</p>
       </div>
-
-      <div class="footer">
-        <h1>Footer</h1>
+      <div class="box box-item"><h2>Five</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore ab, nostrum iste, quasi repudiandae illo cum quam earum harum excepturi hic, quibusdam ipsam aut cupiditate! Quam at asperiores obcaecati adipisci expedita maxime velit quidem officiis nulla, porro placeat rem eveniet maiores itaque! Quis, natus, suscipit!</p>
       </div>
+      <div class="box box-item"><h2>Six</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor repellendus a fugit aliquid autem dolorum consectetur officiis ex voluptatem molestias aspernatur cupiditate labore nobis voluptates aut, ipsam ullam eum tempora nostrum. Voluptatum debitis similique, molestias aperiam dolore asperiores dolorem id. Totam id ad laborum recusandae excepturi sunt officiis aut, omnis, vero porro ea, voluptatum placeat.</p>
+      </div>
+    </div>
 
+    <br>
+    <h1 class="t-cnt" style="color: teal;">Container-3</h1>
+    <div class="container-3 t-cnt">
+      <div class="box box-item box7"><h2>Seven</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci quibusdam et voluptatem, porro? Voluptas, aut.</p>
+      </div>
+      <div class="box box-item box8"><h2>Eight</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore ab, nostrum iste, quasi repudiandae illo cum quam earum harum excepturi hic, quibusdam ipsam aut cupiditate! Quam at asperiores obcaecati adipisci expedita maxime velit quidem officiis nulla, porro placeat rem eveniet maiores itaque! Quis, natus, suscipit!</p>
+      </div>
+      <div class="box box-item box9"><h2>Nine</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor repellendus a fugit aliquid autem dolorum consectetur officiis ex voluptatem molestias aspernatur cupiditate labore nobis voluptates aut, ipsam ullam eum tempora nostrum. Voluptatum debitis similique, molestias aperiam dolore asperiores dolorem id. Totam id ad laborum recusandae excepturi sunt officiis aut, omnis, vero porro ea, voluptatum placeat.</p>
+      </div>
     </div>
 
   </body>
